# ChangeLog for app-misc/figlet
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/figlet/ChangeLog,v 1.32 2008/03/12 22:05:03 armin76 Exp $

  12 Mar 2008; Raúl Porcel <armin76@gentoo.org>
  -files/figlet-221-gentoo.diff, figlet-222.ebuild:
  ia64 stable

  20 Jul 2007; Samuli Suominen <drac@gentoo.org> figlet-222.ebuild:
  Keyword for ~arm, armin76 made me.

  20 Jul 2007; Raúl Porcel <armin76@gentoo.org> figlet-222.ebuild:
  Add ~ia64, we need figlet!

  24 Apr 2007; Michael Sterrett <mr_bones_@gentoo.org>
  -figlet-221-r1.ebuild:
  clean out older ebuild

  18 Apr 2007; Alexander Færøy <eroyf@gentoo.org> figlet-222.ebuild:
  Stable on MIPS; bug #171676

  09 Apr 2007; Peter Weller <welp@gentoo.org> figlet-222.ebuild:
  Stable on amd64 wrt bug 171676

  24 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> figlet-222.ebuild:
  Stable on Alpha, bug 171676.

  24 Mar 2007; Joseph Jezak <josejx@gentoo.org> figlet-222.ebuild:
  Marked ppc stable for bug #171676.

  24 Mar 2007; Markus Rothe <corsair@gentoo.org> figlet-222.ebuild:
  Stable on ppc64; bug #171676

  22 Mar 2007; Jeroen Roovers <jer@gentoo.org> figlet-222.ebuild:
  Stable for HPPA (bug #171676).

  15 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> figlet-222.ebuild:
  Stable on sprac

  13 Mar 2007; Raúl Porcel <armin76@gentoo.org> figlet-222.ebuild:
  x86 stable

*figlet-222 (20 Dec 2006)

  20 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -files/figlet-22-r1-gentoo.diff, +files/figlet-222-gentoo.diff,
  +figlet-222.ebuild:
  version bump

  16 Jun 2006; Markus Rothe <corsair@gentoo.org> figlet-221-r1.ebuild:
  Stable on ppc64

  19 May 2006; Diego Pettenò <flameeyes@gentoo.org> figlet-221-r1.ebuild:
  Add ~x86-fbsd keyword.

  08 May 2006; Markus Rothe <corsair@gentoo.org> figlet-221-r1.ebuild:
  Added ~ppc64

  07 Apr 2005; Aron Griffis <agriffis@gentoo.org> figlet-221-r1.ebuild:
  stable on amd64
