@@ -3,6 +3,6 @@ AUX figlet.bashcomp 1489 RMD160 3fd1b0bdff690bf7402f1d756285b575d5b43101 SHA1 75
 DIST contributed-figlet-221.tar.gz 1393560 RMD160 823585a19fb504eafdc51c0b228121ed784ae54b SHA1 a23ecfdb54301e93b6578c3c465ba84c8f861d4f SHA256 2c569e052e638b28e4205023ae717f7b07e05695b728e4c80f4ce700354b18c8
 DIST figlet222.tar.gz 166727 RMD160 fc39809b1f5d5e498d722d49ae88132528633d9f SHA1 138aa027f90c0d68429c7b71af4e51c176bab92b SHA256 21f8f9e9b2190fbc0f801fb4704355e5d73d36c55670272cd08cad3408d1f5fe
 DIST ms-dos-figlet-221.tar.gz 2414 RMD160 63bbef976699747fdfd6f289ac3d22d4eb710dc8 SHA1 2bc48e0f1da9d585b7030a6986781525181c6357 SHA256 d3678a98b3b058ae4ded8525f51a1c53b3c6e6833793cf7cf98fcd9550ed7e70
-EBUILD figlet-222.ebuild 1715 RMD160 5d22c489a39cc87df1872fe211591368bc49d99e SHA1 0bf2c8ff1b65021dfc93e0b374ddfbe80c1d795d SHA256 7db3db7aa61383b71d81bc6a5aa990f65c5348a041134026c04170a7cd44c81d
-MISC ChangeLog 4054 RMD160 17703e141c035ee2dcdc55befcc1b54f00ef7fa1 SHA1 fac41d4b25d0f45f53d9448b9c0986cb752888fe SHA256 83863fceea00b6edb3de8eafba0717c438310a68adaa0d2a6800ec0cdeedba96
+EBUILD figlet-222.ebuild 1707 RMD160 8e95e29c92c1baa55bb49db0299db6660504a906 SHA1 6524889dc1bbbda7b31feea209feb11daba5b66e SHA256 6ad6e5574743a697140c1fdd1413f8fca72a2f051bb9d48e452b46e91d7b0e85
+MISC ChangeLog 4289 RMD160 024a3be9e67778dc62f5bbd7c7f9c12f59589adb SHA1 cedb7ef70c09845412493a6dfe2930547b700e96 SHA256 479c128223b18532276c9b04a6329c3c40466b290855ebe0784b1af69a076c78
 MISC metadata.xml 253 RMD160 f574784ce11ddab7baf200be4286237456cb2233 SHA1 d3e6234fe741b4c5fd0887c5aa238345f5ae8d54 SHA256 fd6ace3f5b4164a271581180a27f7b94dd4f0a7d4e1525ab70d681c33ae1289a
